# cpp-hw01

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  deploy.sh  version.h.in
src/: main.cpp
test/: version.cpp
